--- a/package.json
+++ b/package.json
@@ -17,17 +17,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.1.0",
-    "@angular/common": "~7.1.0",
     "@angular/cli": "^7.1.0",
-    "@angular/compiler-cli": "^7.1.1",
+    "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
+    "@angular/compiler-cli": "^7.1.1",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "apollo-angular": "^1.5.0",
+    "apollo-angular-link-http": "^1.4.0",
+    "apollo-cache-inmemory": "^1.3.11",
+    "apollo-client": "^2.4.7",
+    "apollo-link": "^1.2.4",
+    "apollo-link-error": "^1.1.2",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
+    "hammerjs": "^2.0.8",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
