--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,21 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/font-awesome/css/font-awesome.min.css",
+              "./node_modules/admin-lte/bower_components/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/admin-lte/dist/css/AdminLTE.min.css",
+              "./node_modules/admin-lte/dist/css/skins/skin-black-light.css",
+              "./node_modules/admin-lte/bower_components/Ionicons/css/ionicons.min.css",
+              "./node_modules/admin-lte/plugins/iCheck/flat/red.css",
+              "./node_modules/admin-lte/plugins/iCheck/square/blue.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/admin-lte/bower_components/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/admin-lte/dist/js/adminlte.min.js",
+              "./node_modules/admin-lte/plugins/iCheck/icheck.min.js"
+            ]
           },
           "configurations": {
             "production": {
