--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "admin-lte": "^2.4.8",
+    "angularx-social-login": "^1.2.5",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.4.0",
     "apollo-cache-inmemory": "^1.3.11",
@@ -34,6 +35,7 @@
     "apollo-link": "^1.2.4",
     "apollo-link-error": "^1.1.2",
     "core-js": "^2.5.4",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
@@ -49,6 +51,7 @@
     "@angular/cli": "^7.1.0",
     "@angular/compiler-cli": "^7.1.1",
     "@angular/language-service": "~7.1.0",
+    "@types/crypto-js": "^3.1.43",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
